--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "devDependencies": {
     "css-loader": "^0.28.8",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0"
+  },
+  "scripts": {
+    "webpack": "webpack"
   }
 }
